--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,107 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+.main {
+  --back: hsl(0deg 0% 0% / 0.3);
+  --hover: hsla(288, 100%, 50%, 1);
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --seasalt: hsla(210, 17%, 98%, 1);
+  --antiflash-white: hsla(210, 16%, 93%, 1);
+  --platinum: hsla(210, 14%, 89%, 1);
+  --french-gray: hsla(210, 14%, 83%, 1);
+  --french-gray-2: hsla(210, 11%, 71%, 1);
+  --slate-gray: hsla(208, 7%, 46%, 1);
+  --outer-space: hsla(210, 9%, 31%, 1);
+  --onyx: hsla(210, 10%, 23%, 1);
+  --eerie-black: hsla(210, 11%, 15%, 1);
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
+  min-height: 100vh;
+  width: 100%;
+  background: -webkit-linear-gradient(
+    0deg,
+    var(--eerie-black),
+    var(--slate-gray)
   );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
+  background: -moz-linear-gradient(0deg, var(--eerie-black), var(--slate-gray));
+  background: linear-gradient(0deg, var(--eerie-black), var(--slate-gray));
+  color: var(--antiflash-white);
   overflow-x: hidden;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
   color: inherit;
   text-decoration: none;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.block {
+  overflow: hidden;
+  padding: 15px;
+  background-color: var(--back);
+  border-radius: 15px;
+  gap: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.6);
+}
+.shadow {
+  -webkit-box-shadow: 0px 20px 49px -13px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0px 20px 49px -13px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 20px 49px -13px rgba(0, 0, 0, 0.5);
+}
+input {
+  all: unset;
+  border-bottom: 1px solid black;
+  padding: 5px;
+}
+button {
+  all: unset;
+  background-color: var(--platinum);
+  color: var(--eerie-black);
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  transition: all 100ms ease-in-out;
+}
+button:hover {
+  cursor: pointer;
+  background-color: var(--french-gray-2);
+}
+button:active {
+  transform: scale(0.95);
+}
+
+.inputBlock > input {
+  width: calc(100% - 15px);
+}
+.inputBlock > button {
+  width: 40%;
+  margin-top: 10px;
+}
+.field {
+  overflow: hidden;
+  display: flex;
+  gap: 10px;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.field > div {
+  width: 45%;
+  display: flex;
+  justify-content: flex-start;
+  height: fit-content;
+  flex-direction: column;
+  gap: 10px;
+}
+
+#helper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: var(--back);
+  font-size: 0.5em;
+  font-weight: bold;
+  user-select: none;
 }
